# crossfit-gym

./: .env.deploy  .env.example  .env.production  .env.production.example  .vercelignore  DOCKER_DEPLOYMENT.md  IMPLEMENTATION_COMPLETE.md  INVOICE_V3_REFACTOR.md  PDF_GENERATOR_README.md  QUICKSTART.md  README.md  README_START_HERE.md  REFACTOR_COMPLETE.md  TASK_5_VERIFICATION.md  check_dashboard.js  crossfit.sql  crossfit_clean.sql  diag.json  diag3.txt  docker-compose.yml  list-users.js  main.py  migrate-to-v3.ps1  package-lock.json  package.json  pdf_generator.backup.20260216_150206.py  pdf_generator.py  pdf_generator_v2.py  push_output.txt  pyproject.toml  railway.json  requirements.txt  setup.ps1  start-pdf-service.ps1  test-backend-connection.js  test-db.js  test-pg-ip.js  test-pg-unsafe.js  test-pg-v2.js  test-pg.js  (+3 more)
backend/: .env.example  .gitignore  Dockerfile  activate_existing_users.js  check-counts.js  check_data.js  check_db.js  check_manildo.js  check_migs.js  check_user_exists.js  debug_db.js  debug_stats_final.js  fix_admin.js  force_migrate.js  gen_token.js  logs_debug.txt  logs_full.txt  manual_migration_status.js  mig_status.txt  migrate_status.txt  migrate_status_production.txt  migration_output.txt  migs_out.txt  package-lock.json  package.json  railway.json  read_logs.txt  read_migs.txt  seed.js  setup_storage.js  test-db.js  test_api.js  test_conn.js  test_db.js  test_db_counts.js  test_db_dates.js  test_db_esm.js  test_db_simple.js  test_fixedcost.js  test_login.js  (+16 more)
frontend/: .gitignore  Dockerfile  build_cf_log.txt  build_debug.txt  drop_out.txt  (+19 more)
(+153 files in other folders)
