[project]
name = "crossfit-gym-pdf-service"
version = "3.0.0"
description = "Professional Invoice Generator Service"
dependencies = [
    "fastapi",
    "uvicorn",
    "pydantic",
    "reportlab",
    "python-multipart",
    "python-dotenv",
    "PyJWT",
    "qrcode",
    "Pillow",
    "requests",
]

[project.scripts]
app = "main:app"

[tool.setuptools]
py-modules = ["main"]
